--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "firebase": "^10.7.0",
-    "firebase-admin": "^12.0.0",
+    "firebase-admin": "^12.7.0",
     "lucide-react": "^0.563.0",
     "next": "^15.0.0",
     "next-auth": "^4.24.10",
@@ -36,6 +36,7 @@
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.16",
     "css-loader": "^6.8.1",
+    "dotenv": "^17.2.4",
     "eslint": "^8.56.0",
     "eslint-config-next": "^15.0.0",
     "postcss": "^8.4.32",
